[gd_scene load_steps=21 format=2]

[ext_resource path="res://Battle/Player/spaceMissiles_010.png" type="Texture" id=1]
[ext_resource path="res://Battle/Player/effect_yellow.png" type="Texture" id=2]
[ext_resource path="res://Battle/Player/explosion05.png" type="Texture" id=3]
[ext_resource path="res://Battle/Player/explosion02.png" type="Texture" id=4]
[ext_resource path="res://Battle/Player/explosion01.png" type="Texture" id=5]
[ext_resource path="res://Battle/Player/explosion00.png" type="Texture" id=6]
[ext_resource path="res://Battle/Player/explosion08.png" type="Texture" id=7]
[ext_resource path="res://Battle/Player/explosion03.png" type="Texture" id=8]
[ext_resource path="res://Battle/Player/explosion04.png" type="Texture" id=9]
[ext_resource path="res://Battle/Player/explosion06.png" type="Texture" id=10]
[ext_resource path="res://Battle/Player/explosion07.png" type="Texture" id=11]
[ext_resource path="res://Battle/Player/Missile.gd" type="Script" id=12]
[ext_resource path="res://Battle/Player/explosionCrunch_003.ogg" type="AudioStream" id=13]
[ext_resource path="res://Battle/Player/impactMetal_000.ogg" type="AudioStream" id=14]
[ext_resource path="res://Battle/Player/confirmation_003.ogg" type="AudioStream" id=15]
[ext_resource path="res://Battle/Player/thrusterFire_000.ogg" type="AudioStream" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 74.0

[sub_resource type="CircleShape2D" id=5]
radius = 306.105

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 1070.99

[node name="Missile" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -5
texture = ExtResource( 1 )

[node name="Trail" type="Sprite" parent="Sprite"]
visible = false
modulate = Color( 1, 0.341176, 0.341176, 1 )
position = Vector2( 0, 84 )
scale = Vector2( 0.417, 0.592 )
texture = ExtResource( 2 )

[node name="ExplosionZone" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="ExplosionZone"]
shape = SubResource( 5 )

[node name="Explosion" type="AnimatedSprite" parent="ExplosionZone"]
scale = Vector2( 4.32137, 4.32137 )
frames = SubResource( 3 )
frame = 1

[node name="ExplosionTimer" type="Timer" parent="ExplosionZone"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ExplosionZone"]
stream = ExtResource( 13 )

[node name="SeekingTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ArmingTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LockOnZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LockOnZone"]
shape = SubResource( 4 )

[node name="LockOn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="Thrusting" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
pitch_scale = 0.7

[node name="Deploy" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Missile_body_entered"]
[connection signal="body_entered" from="ExplosionZone" to="." method="_on_ExplosionZone_body_entered"]
[connection signal="timeout" from="ExplosionZone/ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="SeekingTimer" to="." method="_on_SeekingTimer_timeout"]
[connection signal="timeout" from="ArmingTimer" to="." method="_on_ArmingTimer_timeout"]
[connection signal="body_entered" from="LockOnZone" to="." method="_on_LockOnZone_body_entered"]
[connection signal="body_exited" from="LockOnZone" to="." method="_on_LockOnZone_body_exited"]
